<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_rgba"
        android:orderInCategory="100"
        android:title="@string/action_rgba"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_green"
        android:orderInCategory="100"
        android:title="@string/action_green"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_threshold"
        android:orderInCategory="100"
        android:title="@string/action_threshold"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_morphology"
        android:orderInCategory="100"
        android:title="@string/action_morphology"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_edge"
        android:orderInCategory="100"
        android:title="@string/action_edge"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_hough"
        android:orderInCategory="100"
        android:title="@string/action_hough"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_fit_line"
        android:orderInCategory="100"
        android:title="@string/action_fit_line"
        app:showAsAction="never"/>
</menu>